--- a/order/rejectOrder.hbs
+++ b/order/rejectOrder.hbs
@@ -1,38 +1,50 @@
-{{#each items}}
+<mj-wrapper
+  padding="10px 30px 0 30px"
+  background-color="#FFFFFF"
+>
   <mj-wrapper
-    padding="10px 30px 0 30px"
-    background-color="#FFFFFF"
+    border-radius="5px"
+    border="1px solid #f1f1f1"
   >
-    <mj-section
-      border="1px solid #f1f1f1"
-      full-width="full-width"
-      border-radius="5px"
-      padding="10px 0 10px 10px">
-      <mj-group width="75%">
-        <mj-column border-radius="5px" padding="0" vertical-align="middle" width="20%">
-          <mj-image padding="0" align="left" alt="suworld" width="60px"
-            src={{this.image}}></mj-image>
-        </mj-column>
+    <mj-section padding="0 0 0 10px">
+      <mj-column padding="0"><mj-text
+        css-class="order-text"
+        padding="0"
+        align="left"
+        font-size="15px">
+        <span style="font-weight: 600">Состав заказа</span>
+      </mj-text></mj-column>
+    </mj-section>
+    {{#each items}}
+      <mj-section
+        full-width="full-width"
+        padding="10px 0 10px 10px">
+        <mj-group width="75%">
+          <mj-column border-radius="5px" padding="0" vertical-align="middle" width="20%">
+            <mj-image padding="0" align="left" alt="suworld" width="60px"
+              src={{this.image}}></mj-image>
+          </mj-column>
 
-        <mj-column padding="0 0 0 10px" vertical-align="middle" width="80%">
+          <mj-column padding="0 0 0 10px" vertical-align="middle" width="80%">
+            <mj-text
+              css-class="order-text"
+              padding="0"
+              align="left"
+              font-size="15px">
+              <p class="order-text"><span style="font-weight: 600">{{this.name}}</span></p>
+              <p class="order-text">{{this.description}}</p>
+            </mj-text>
+          </mj-column>
+        </mj-group>
+        <mj-column padding="0" width="25%" vertical-align="middle">
           <mj-text
-            css-class="order-text"
+            align="center"
             padding="0"
-            align="left"
-            font-size="15px">
-            <p class="order-text"><span style="font-weight: 600">{{this.name}}</span></p>
-            <p class="order-text">{{this.description}}</p>
+            font-size="15px"><span style="font-weight: 600">{{this.price}} руб</span>
           </mj-text>
         </mj-column>
-      </mj-group>
-      <mj-column padding="0" width="25%" vertical-align="middle">
-        <mj-text
-          align="center"
-          padding="0"
-          font-size="15px"><span style="font-weight: 600">{{this.price}} руб</span>
-        </mj-text>
-      </mj-column>
-    </mj-section>
-
+      </mj-section>
+    {{/each}}
   </mj-wrapper>
-{{/each}}
+</mj-wrapper>
+
